--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -479,6 +479,14 @@ autotune:execute-tuning:
     # On ROCm 5.7 or later, check if this can be removed - the presumption is that the failure is caused by a compiler issue.
     - >
       cd "${CI_PROJECT_DIR}"
+    - 'numberOfFiles=0'
+    - 'for filename in ${BUILD_DIR}/benchmark/benchmark*; do'
+    - '    numberOfFiles++'
+    - done
+    - 'if [ $numberOfFiles -eq 0 ]; then'
+    - '    echo "There are no benchmark executables. Run the build job with a BUILD_TARGET."'
+    -     exit 1
+    - fi
     - mkdir -p "${AUTOTUNE_RESULT_DIR}"
     - python3
       .gitlab/run_benchmarks.py
