--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -290,16 +290,17 @@ autotune:build:
     - cmake --build . --target $BENCHMARK_TARGETS
     - 'rm -rf $BUILD_DIR/benchmark/benchmark*.parallel'
     # remove benchmark executables if their size together is too large for gitlab ci to handle
-    - 'total_size_bytes=0'
-    - 'while read -r file_size; do'
-    - '  total_size_bytes=$((total_size_bytes + file_size))'
-    - 'done < <(stat --format="%s" benchmark/benchmark*)'
-    - 'total_size_gib="$(numfmt --round=down --to-unit=Gi "$total_size_bytes")"'
-    - 'if [ "$total_size_gib" -ge 3 ]; then'
-    - '  printf "Total size: %s (%d bytes) > 3GiB, skipping benchmark executables from the artifact.\n" \'
-    - '      "$(numfmt --to=iec-i "$total_size_bytes")" "$total_size_bytes"'
-    - '  rm benchmark/benchmark*'
-    - fi
+    - |
+      total_size_bytes=0
+      while read -r file_size; do
+        total_size_bytes=$((total_size_bytes + file_size))
+      done < <(stat --format="%s" benchmark/benchmark*)
+      total_size_gib="$(numfmt --round=down --to-unit=Gi "$total_size_bytes")"
+      if [ "$total_size_gib" -ge 3 ]; then
+        printf "Total size: %s (%d bytes) > 3GiB, skipping benchmark executables from the artifact.\n" \
+            "$(numfmt --to=iec-i "$total_size_bytes")" "$total_size_bytes"
+        rm benchmark/benchmark*
+      fi
 
   artifacts:
     paths:
