move autotune:execute-tuning to use multiline yaml for script

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -485,10 +485,11 @@ autotune:execute-tuning:
     # On ROCm 5.7 or later, check if this can be removed - the presumption is that the failure is caused by a compiler issue.
     - >
       cd "${CI_PROJECT_DIR}"
-    - 'if ! [ -d "${BUILD_DIR}/benchmark" ]; then'
-    - '    echo "There are no benchmark executables. Run the build job with a BUILD_TARGET."'
-    -     exit 1
-    - fi
+    - |
+      if [ ! -d "${BUILD_DIR}/benchmark" ]; then
+          echo "There are no benchmark executables. Run the build job with a BUILD_TARGET."
+          exit 1
+      fi
     - mkdir -p "${AUTOTUNE_RESULT_DIR}"
     - python3
       .gitlab/run_benchmarks.py
