removed  unused code warnings in benchmarks and added warning compiler flags to gitlab ci for benchmarks

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -247,6 +247,7 @@ build:benchmark:
       -S $CI_PROJECT_DIR
       -G Ninja
       -D CMAKE_CXX_COMPILER="$AMDCLANG"
+      -D CMAKE_CXX_FLAGS="-Wall -Wextra -Werror -Wno-#pragma-messages"
       -D CMAKE_BUILD_TYPE=Release
       -D BUILD_TEST=OFF
       -D BUILD_EXAMPLE=OFF
