test(test_type_traits.cpp): added tests for 'invoke_result'

--- a/test/rocprim/CMakeLists.txt
+++ b/test/rocprim/CMakeLists.txt
@@ -263,6 +263,7 @@ add_rocprim_test("rocprim.reverse_iterator" test_reverse_iterator.cpp)
 if(NOT USE_HIP_CPU)
   add_rocprim_test("rocprim.texture_cache_iterator" test_texture_cache_iterator.cpp)
 endif()
+add_rocprim_test("rocprim.type_traits" test_type_traits.cpp)
 add_rocprim_test("rocprim.thread" test_thread.cpp)
 add_rocprim_test("rocprim.thread_algos" test_thread_algos.cpp)
 add_rocprim_test("rocprim.transform_iterator" test_transform_iterator.cpp)
