--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -26,7 +26,7 @@ include(GNUInstallDirs)
 
 rocm_add_sphinx_doc(
   "${CMAKE_CURRENT_SOURCE_DIR}"
-  BUILDER html
+  BUILDER inventory
   OUTPUT_DIR html
   USE_DOXYGEN
 )
