--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -134,6 +134,7 @@ add_rocprim_benchmark(benchmark_device_batch_memcpy.cpp)
 add_rocprim_benchmark(benchmark_device_binary_search.cpp)
 add_rocprim_benchmark(benchmark_device_histogram.cpp)
 add_rocprim_benchmark(benchmark_device_merge.cpp)
+add_rocprim_benchmark(benchmark_device_merge_inplace.cpp)
 add_rocprim_benchmark(benchmark_device_merge_sort.cpp)
 add_rocprim_benchmark(benchmark_device_merge_sort_block_sort.cpp)
 add_rocprim_benchmark(benchmark_device_merge_sort_block_merge.cpp)
