--- a/test/rocprim/CMakeLists.txt
+++ b/test/rocprim/CMakeLists.txt
@@ -248,6 +248,7 @@ add_rocprim_test("rocprim.device_binary_search" test_device_binary_search.cpp)
 add_rocprim_test("rocprim.device_adjacent_difference" test_device_adjacent_difference.cpp)
 add_rocprim_test("rocprim.device_histogram" test_device_histogram.cpp)
 add_rocprim_test("rocprim.device_merge" test_device_merge.cpp)
+add_rocprim_test("rocprim.device_merge_inplace" test_device_merge_inplace.cpp)
 add_rocprim_test("rocprim.device_merge_sort" test_device_merge_sort.cpp)
 add_rocprim_test("rocprim.device_partition" test_device_partition.cpp)
 add_rocprim_test_parallel("rocprim.device_radix_sort" test_device_radix_sort.cpp.in)
