test(benchmark_device_radix_sort): add temp tooling to benchmark device radix sort

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,11 @@ CMakeUserPresets.json
 
 # Python
 __pycache__
+
+# Temporary include this for testing purpose
+!/build
+/build/*
+!build/_results
+build/_results/*
+!build/_results/compare.py
+!build/_bench.sh
