fix(autotune-search): fixed script bugs

--- a/benchmark/benchmark_device_segmented_radix_sort_pairs.parallel.cpp.in
+++ b/benchmark/benchmark_device_segmented_radix_sort_pairs.parallel.cpp.in
@@ -40,6 +40,8 @@ auto benchmarks = config_autotune_register::create_bulk(
         @WarpMediumLWS@,
         @WarpMediumIPT@,
         @WarpMediumBS@,
+        @KeyType@,
+        @ValueType@,
         true
     >::create);
 } // namespace
